@@ -1,0 +1,10 @@
+## Rdiff -- diff 'without R version'
+
+args=
+while test -n "${1}"; do
+  ## quote each argument here, unquote in R code.
+  args="${args}nextArg${1}"
+  shift
+done
+
+R_DEFAULT_PACKAGES=NULL "${R_HOME}/bin/R" -e 'tools:::.Rdiff()' --vanilla --slave --args ${args}
